source/fado/parse2/GenericSQLParser.java
// Generated from /Users/jasonosgood/Projects/fado/source/fado/parse2/GenericSQL.g4 by ANTLR 4.x
package fado.parse2;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GenericSQLParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__2=1, T__1=2, T__0=3, ALL=4, AND=5, ANY=6, AS=7, ASC=8, BETWEEN=9, BY=10, 
		CASE=11, DELETE=12, DESC=13, DISTINCT=14, ELSE=15, END=16, EXISTS=17, 
		FALSE=18, FROM=19, FULL=20, GROUP=21, HAVING=22, IN=23, INNER=24, INSERT=25, 
		INTO=26, IS=27, JOIN=28, LEFT=29, LIKE=30, NATURAL=31, NOT=32, NULL=33, 
		ON=34, OR=35, ORDER=36, OUTER=37, PERCENT=38, RIGHT=39, SELECT=40, SET=41, 
		SOME=42, THEN=43, TRUE=44, TOP=45, UNION=46, UNIQUE=47, UPDATE=48, USING=49, 
		VALUES=50, WHEN=51, WHERE=52, MAX=53, MIN=54, COUNT=55, Integer=56, Float=57, 
		String=58, Timestamp=59, Identifier=60, Comment=61, Whitespace=62, DOT=63, 
		COMMA=64, LPAREN=65, RPAREN=66, LCURLY=67, RCURLY=68, STRCAT=69, QUESTION=70, 
		COLON=71, SEMI=72, EQ=73, NEQ1=74, NEQ2=75, LTE=76, LT=77, GTE=78, GT=79, 
		PLUS=80, MINUS=81, DIVIDE=82, STAR=83, MOD=84;
	public static final String[] tokenNames = {
		"<INVALID>", "'{ts'", "'{t'", "'{d'", "ALL", "AND", "ANY", "AS", "ASC", 
		"BETWEEN", "BY", "CASE", "DELETE", "DESC", "DISTINCT", "ELSE", "END", 
		"EXISTS", "FALSE", "FROM", "FULL", "GROUP", "HAVING", "IN", "INNER", "INSERT", 
		"INTO", "IS", "JOIN", "LEFT", "LIKE", "NATURAL", "NOT", "NULL", "ON", 
		"OR", "ORDER", "OUTER", "PERCENT", "RIGHT", "SELECT", "SET", "SOME", "THEN", 
		"TRUE", "TOP", "UNION", "UNIQUE", "UPDATE", "USING", "VALUES", "WHEN", 
		"WHERE", "MAX", "MIN", "COUNT", "Integer", "Float", "String", "Timestamp", 
		"Identifier", "Comment", "Whitespace", "'.'", "','", "'('", "')'", "'{'", 
		"'}'", "'||'", "'?'", "':'", "';'", "'='", "'<>'", "'!='", "'<='", "'<'", 
		"'>='", "'>'", "'+'", "'-'", "'/'", "'*'", "'%'"
	};
	public static final int
		RULE_statement = 0, RULE_subSelect = 1, RULE_select = 2, RULE_insert = 3, 
		RULE_update = 4, RULE_setter = 5, RULE_into = 6, RULE_columnList = 7, 
		RULE_values = 8, RULE_itemList = 9, RULE_item = 10, RULE_allColumns = 11, 
		RULE_alias = 12, RULE_function = 13, RULE_from = 14, RULE_fromItem = 15, 
		RULE_join = 16, RULE_where = 17, RULE_groupBy = 18, RULE_having = 19, 
		RULE_orderBy = 20, RULE_orderByItem = 21, RULE_nestedCondition = 22, RULE_conditionList = 23, 
		RULE_condition = 24, RULE_in = 25, RULE_between = 26, RULE_isNull = 27, 
		RULE_exists = 28, RULE_like = 29, RULE_comparison = 30, RULE_comparator = 31, 
		RULE_quantifier = 32, RULE_expressionList = 33, RULE_nestedExpression = 34, 
		RULE_expression = 35, RULE_multiply = 36, RULE_value = 37, RULE_literal = 38, 
		RULE_date = 39, RULE_unary = 40, RULE_caseExpression = 41, RULE_tableRef = 42, 
		RULE_columnRef = 43, RULE_databaseName = 44, RULE_tableName = 45, RULE_tableAlias = 46, 
		RULE_columnName = 47;
	public static final String[] ruleNames = {
		"statement", "subSelect", "select", "insert", "update", "setter", "into", 
		"columnList", "values", "itemList", "item", "allColumns", "alias", "function", 
		"from", "fromItem", "join", "where", "groupBy", "having", "orderBy", "orderByItem", 
		"nestedCondition", "conditionList", "condition", "in", "between", "isNull", 
		"exists", "like", "comparison", "comparator", "quantifier", "expressionList", 
		"nestedExpression", "expression", "multiply", "value", "literal", "date", 
		"unary", "caseExpression", "tableRef", "columnRef", "databaseName", "tableName", 
		"tableAlias", "columnName"
	};

	@Override
	public String getGrammarFileName() { return "GenericSQL.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GenericSQLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class StatementContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(GenericSQLParser.EOF, 0); }
		public UpdateContext update() {
			return getRuleContext(UpdateContext.class,0);
		}
		public SelectContext select() {
			return getRuleContext(SelectContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(GenericSQLParser.SEMI, 0); }
		public InsertContext insert() {
			return getRuleContext(InsertContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_statement);
		int _la;
		try {
			setState(114);
			switch (_input.LA(1)) {
			case SELECT:
				enterOuterAlt(_localctx, 1);
				{
				setState(96); select();
				setState(98);
				_la = _input.LA(1);
				if (_la==SEMI) {
					{
					setState(97); match(SEMI);
					}
				}

				setState(100); match(EOF);
				}
				break;
			case INSERT:
				enterOuterAlt(_localctx, 2);
				{
				setState(102); insert();
				setState(104);
				_la = _input.LA(1);
				if (_la==SEMI) {
					{
					setState(103); match(SEMI);
					}
				}

				setState(106); match(EOF);
				}
				break;
			case UPDATE:
				enterOuterAlt(_localctx, 3);
				{
				setState(108); update();
				setState(110);
				_la = _input.LA(1);
				if (_la==SEMI) {
					{
					setState(109); match(SEMI);
					}
				}

				setState(112); match(EOF);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SubSelectContext extends ParserRuleContext {
		public SelectContext select() {
			return getRuleContext(SelectContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(GenericSQLParser.RPAREN, 0); }
		public TerminalNode LPAREN() { return getToken(GenericSQLParser.LPAREN, 0); }
		public SubSelectContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subSelect; }
	}

	public final SubSelectContext subSelect() throws RecognitionException {
		SubSelectContext _localctx = new SubSelectContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_subSelect);
		try {
			setState(121);
			switch (_input.LA(1)) {
			case SELECT:
				enterOuterAlt(_localctx, 1);
				{
				setState(116); select();
				}
				break;
			case LPAREN:
				enterOuterAlt(_localctx, 2);
				{
				setState(117); match(LPAREN);
				setState(118); select();
				setState(119); match(RPAREN);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SelectContext extends ParserRuleContext {
		public HavingContext having() {
			return getRuleContext(HavingContext.class,0);
		}
		public TerminalNode Integer() { return getToken(GenericSQLParser.Integer, 0); }
		public FromContext from() {
			return getRuleContext(FromContext.class,0);
		}
		public OrderByContext orderBy() {
			return getRuleContext(OrderByContext.class,0);
		}
		public TerminalNode ALL() { return getToken(GenericSQLParser.ALL, 0); }
		public JoinContext join(int i) {
			return getRuleContext(JoinContext.class,i);
		}
		public TerminalNode PERCENT() { return getToken(GenericSQLParser.PERCENT, 0); }
		public ItemListContext itemList() {
			return getRuleContext(ItemListContext.class,0);
		}
		public TerminalNode TOP() { return getToken(GenericSQLParser.TOP, 0); }
		public IntoContext into() {
			return getRuleContext(IntoContext.class,0);
		}
		public TerminalNode SELECT() { return getToken(GenericSQLParser.SELECT, 0); }
		public TerminalNode UNIQUE() { return getToken(GenericSQLParser.UNIQUE, 0); }
		public List<JoinContext> join() {
			return getRuleContexts(JoinContext.class);
		}
		public WhereContext where() {
			return getRuleContext(WhereContext.class,0);
		}
		public TerminalNode DISTINCT() { return getToken(GenericSQLParser.DISTINCT, 0); }
		public GroupByContext groupBy() {
			return getRuleContext(GroupByContext.class,0);
		}
		public SelectContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_select; }
	}

	public final SelectContext select() throws RecognitionException {
		SelectContext _localctx = new SelectContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_select);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123); match(SELECT);
			setState(125);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ALL) | (1L << DISTINCT) | (1L << UNIQUE))) != 0)) {
				{
				setState(124);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ALL) | (1L << DISTINCT) | (1L << UNIQUE))) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				}
			}

			setState(132);
			_la = _input.LA(1);
			if (_la==TOP) {
				{
				setState(127); match(TOP);
				setState(128); match(Integer);
				setState(130);
				_la = _input.LA(1);
				if (_la==PERCENT) {
					{
					setState(129); match(PERCENT);
					}
				}

				}
			}

			setState(134); itemList();
			setState(136);
			_la = _input.LA(1);
			if (_la==INTO) {
				{
				setState(135); into();
				}
			}

			setState(138); from();
			setState(142);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INNER) | (1L << JOIN) | (1L << LEFT) | (1L << NATURAL) | (1L << OUTER) | (1L << RIGHT))) != 0)) {
				{
				{
				setState(139); join();
				}
				}
				setState(144);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(146);
			_la = _input.LA(1);
			if (_la==WHERE) {
				{
				setState(145); where();
				}
			}

			setState(149);
			_la = _input.LA(1);
			if (_la==GROUP) {
				{
				setState(148); groupBy();
				}
			}

			setState(152);
			_la = _input.LA(1);
			if (_la==HAVING) {
				{
				setState(151); having();
				}
			}

			setState(155);
			_la = _input.LA(1);
			if (_la==ORDER) {
				{
				setState(154); orderBy();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InsertContext extends ParserRuleContext {
		public ColumnListContext columnList() {
			return getRuleContext(ColumnListContext.class,0);
		}
		public TerminalNode INSERT() { return getToken(GenericSQLParser.INSERT, 0); }
		public ValuesContext values() {
			return getRuleContext(ValuesContext.class,0);
		}
		public IntoContext into() {
			return getRuleContext(IntoContext.class,0);
		}
		public InsertContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_insert; }
	}

	public final InsertContext insert() throws RecognitionException {
		InsertContext _localctx = new InsertContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_insert);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(157); match(INSERT);
			setState(158); into();
			setState(160);
			_la = _input.LA(1);
			if (_la==LPAREN) {
				{
				setState(159); columnList();
				}
			}

			{
			setState(162); values();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UpdateContext extends ParserRuleContext {
		public TerminalNode SET() { return getToken(GenericSQLParser.SET, 0); }
		public WhereContext where() {
			return getRuleContext(WhereContext.class,0);
		}
		public List<TerminalNode> COMMA() { return getTokens(GenericSQLParser.COMMA); }
		public TerminalNode UPDATE() { return getToken(GenericSQLParser.UPDATE, 0); }
		public List<SetterContext> setter() {
			return getRuleContexts(SetterContext.class);
		}
		public TableRefContext tableRef() {
			return getRuleContext(TableRefContext.class,0);
		}
		public TerminalNode COMMA(int i) {
			return getToken(GenericSQLParser.COMMA, i);
		}
		public SetterContext setter(int i) {
			return getRuleContext(SetterContext.class,i);
		}
		public UpdateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_update; }
	}

	public final UpdateContext update() throws RecognitionException {
		UpdateContext _localctx = new UpdateContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_update);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(164); match(UPDATE);
			setState(165); tableRef();
			setState(166); match(SET);
			setState(167); setter();
			setState(172);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(168); match(COMMA);
				setState(169); setter();
				}
				}
				setState(174);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(176);
			_la = _input.LA(1);
			if (_la==WHERE) {
				{
				setState(175); where();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SetterContext extends ParserRuleContext {
		public ColumnNameContext columnName() {
			return getRuleContext(ColumnNameContext.class,0);
		}
		public LiteralContext literal() {
			return getRuleContext(LiteralContext.class,0);
		}
		public TerminalNode EQ() { return getToken(GenericSQLParser.EQ, 0); }
		public SetterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_setter; }
	}

	public final SetterContext setter() throws RecognitionException {
		SetterContext _localctx = new SetterContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_setter);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(178); columnName();
			setState(179); match(EQ);
			setState(180); literal();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IntoContext extends ParserRuleContext {
		public List<TerminalNode> COMMA() { return getTokens(GenericSQLParser.COMMA); }
		public TableRefContext tableRef(int i) {
			return getRuleContext(TableRefContext.class,i);
		}
		public TerminalNode INTO() { return getToken(GenericSQLParser.INTO, 0); }
		public List<TableRefContext> tableRef() {
			return getRuleContexts(TableRefContext.class);
		}
		public TerminalNode COMMA(int i) {
			return getToken(GenericSQLParser.COMMA, i);
		}
		public IntoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_into; }
	}

	public final IntoContext into() throws RecognitionException {
		IntoContext _localctx = new IntoContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_into);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(182); match(INTO);
			setState(183); tableRef();
			setState(188);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(184); match(COMMA);
				setState(185); tableRef();
				}
				}
				setState(190);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ColumnListContext extends ParserRuleContext {
		public ColumnNameContext columnName(int i) {
			return getRuleContext(ColumnNameContext.class,i);
		}
		public List<ColumnNameContext> columnName() {
			return getRuleContexts(ColumnNameContext.class);
		}
		public List<TerminalNode> COMMA() { return getTokens(GenericSQLParser.COMMA); }
		public TerminalNode RPAREN() { return getToken(GenericSQLParser.RPAREN, 0); }
		public TerminalNode LPAREN() { return getToken(GenericSQLParser.LPAREN, 0); }
		public TerminalNode COMMA(int i) {
			return getToken(GenericSQLParser.COMMA, i);
		}
		public ColumnListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_columnList; }
	}

	public final ColumnListContext columnList() throws RecognitionException {
		ColumnListContext _localctx = new ColumnListContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_columnList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(191); match(LPAREN);
			setState(192); columnName();
			setState(197);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(193); match(COMMA);
				setState(194); columnName();
				}
				}
				setState(199);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(200); match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValuesContext extends ParserRuleContext {
		public List<TerminalNode> COMMA() { return getTokens(GenericSQLParser.COMMA); }
		public TerminalNode RPAREN() { return getToken(GenericSQLParser.RPAREN, 0); }
		public TerminalNode LPAREN() { return getToken(GenericSQLParser.LPAREN, 0); }
		public TerminalNode VALUES() { return getToken(GenericSQLParser.VALUES, 0); }
		public List<LiteralContext> literal() {
			return getRuleContexts(LiteralContext.class);
		}
		public TerminalNode COMMA(int i) {
			return getToken(GenericSQLParser.COMMA, i);
		}
		public LiteralContext literal(int i) {
			return getRuleContext(LiteralContext.class,i);
		}
		public ValuesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_values; }
	}

	public final ValuesContext values() throws RecognitionException {
		ValuesContext _localctx = new ValuesContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_values);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(202); match(VALUES);
			setState(203); match(LPAREN);
			setState(204); literal();
			setState(209);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(205); match(COMMA);
				setState(206); literal();
				}
				}
				setState(211);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(212); match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ItemListContext extends ParserRuleContext {
		public ItemContext item(int i) {
			return getRuleContext(ItemContext.class,i);
		}
		public List<ItemContext> item() {
			return getRuleContexts(ItemContext.class);
		}
		public List<TerminalNode> COMMA() { return getTokens(GenericSQLParser.COMMA); }
		public TerminalNode STAR() { return getToken(GenericSQLParser.STAR, 0); }
		public TerminalNode COMMA(int i) {
			return getToken(GenericSQLParser.COMMA, i);
		}
		public ItemListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_itemList; }
	}

	public final ItemListContext itemList() throws RecognitionException {
		ItemListContext _localctx = new ItemListContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_itemList);
		int _la;
		try {
			setState(223);
			switch (_input.LA(1)) {
			case STAR:
				enterOuterAlt(_localctx, 1);
				{
				setState(214); match(STAR);
				}
				break;
			case 1:
			case 2:
			case 3:
			case CASE:
			case FALSE:
			case TRUE:
			case Integer:
			case Float:
			case String:
			case Identifier:
			case LPAREN:
			case PLUS:
			case MINUS:
				enterOuterAlt(_localctx, 2);
				{
				setState(215); item();
				setState(220);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(216); match(COMMA);
					setState(217); item();
					}
					}
					setState(222);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
